# LycheeAlphaDesk

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ANTI_SPIN_PROTOCOL.zh-CN.md  BROKER_IMPORT_GUIDE.md  BROKER_IMPORT_GUIDE.zh-CN.md  DEVELOPMENT_SPEC.md  DEVELOPMENT_SPEC.zh-CN.md  NEWS_PROVIDER_PLUGIN_API.md  NEWS_PROVIDER_PLUGIN_API.zh-CN.md
docs/superpowers/plans/: 2026-07-05-today-discovery-first-slice.md
docs/superpowers/specs/: 2026-07-05-today-discovery-engine-design.md
examples/demo/: broker-positions.csv  filings.jsonl  ipo.json  market_data.csv  news.jsonl  policy.yaml  portfolio.csv  transactions.csv
src/lychee_alphadesk/: __init__.py
src/lychee_alphadesk/cli/: app.py
src/lychee_alphadesk/core/: __init__.py  action_queue.py  audit.py  cache_freshness.py  config.py  data_engine.py  demo.py  discovery.py  evidence.py  forecast.py  fx.py  ipo.py  live_data.py  llm.py  macro.py  market_calendar.py  opportunity_radar.py  paths.py  policy.py  portfolio.py  readiness.py  reports.py  research.py  (+7 more)
tests/: test_action_queue.py  test_cli.py  test_config.py  test_data_engine.py  test_demo_providers.py  test_discovery.py  test_evidence_pack.py  test_forecast.py  test_fx.py  test_ipo.py  test_live_data.py  test_llm.py  test_macro.py  test_market_calendar.py  test_news_plugins.py  test_opportunity_radar.py  test_policy.py  test_portfolio.py  test_readiness.py  test_research.py  test_research_db.py  test_research_requests.py  test_sector.py  test_tui_app.py  test_tui_dashboard.py  test_workbench.py
(+4 files in other folders)
